--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
             </div>
 
     </header>
+    <!-- main section -->
     <main>  
-        
+        <section class="featured-container">
+            <h2 class="section-title">
+               Our Featured Flowers
+            </h2>
+            <p class="second-description">
+               It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+            </p>
     
     </main>
     <footer>
