--- a/index.html
+++ b/index.html
@@ -8,20 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="nav-container">
-            <h2 class="nav-title">
-                Flower Shop
-            </h2>
-        
-            <div class="menus">
-            <li>Home</li>
-            <li>About</li>
-            <li>Shop</li>
-            <li>Contact</li>
-            </div>
-            </div>
             <div class="banner-container">
-                <img class="picture" src="./Flower Asset/pngwing 10.png" alt="">
+                <img class="picture" src="./Asset/pngwing 10.png" alt="">
                 <div class="banner-info">
                    <h1 class="title">
                     Let's make <br>
@@ -47,6 +35,17 @@
             <p class="second-description">
                It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
             </p>
+            <div class="flower-container">
+                <div class="card-1">
+                    <img class="flower-img" src="" alt="">
+                </div>
+                <div class="card-2">
+                    <img class="flower-img-2" src="" alt="">
+                </div>
+                <div class="card-3">
+                    <img class="flower-img-3" src="" alt="">
+                </div>
+            </div>
     
     </main>
     <footer>
