added featured flowers

--- a/index.html
+++ b/index.html
@@ -37,15 +37,21 @@
             </p>
             <div class="flower-container">
                 <div class="card-1">
-                    <img class="flower-img" src="" alt="">
+                    <img class="flower-img" src="./Asset/pngwing 6.png" alt="">
                 </div>
                 <div class="card-2">
-                    <img class="flower-img-2" src="" alt="">
+                    <img class="flower-img-2" src="./Asset/pngwing 5.png" alt="">
                 </div>
                 <div class="card-3">
-                    <img class="flower-img-3" src="" alt="">
+                    <img class="flower-img-3" src="./Asset/pngwing 7.png" alt="">
                 </div>
             </div>
+           <div class="flower-title">
+            <li> Pink flower</li>
+            <li>Flower Bouquet</li>
+            <li>Yellow flower</li>
+           </div> 
+            
     
     </main>
     <footer>
