Added service container

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
             <li>Flower Bouquet</li>
             <li>Yellow flower</li>
            </div> 
+           </section>
+           <section class="service-container">
+                <div>
+                    <img class="icon" src="./Asset/Group 57.png" alt="">
+                <h3 class="icon-title">Same Day Delivery. Click & Collect.</h3>
+                </div>
+                <div>
+                <img class="icon" src="./Asset/Group 58.png" alt="">
+                    <h3 class="icon-title">Fresh Flowers. Local Growers.</h3>
+                </div>
+                <div>
+                    <img class="icon" src="./Asset/Group 59.png" alt="">
+                <h3 class="icon-title">24/7 Free Support.</h3>
+                </div>
+           </section>
             
     
     </main>
