--- a/index.html
+++ b/index.html
@@ -65,9 +65,31 @@
                     <img class="icon" src="./Asset/Group 59.png" alt="">
                 <h3 class="icon-title">24/7 Free Support.</h3>
                 </div>
-           </section>
-            
-    
+                </section>
+                <section class="sign-up-section">
+                    <div class="title-part">
+                    <h1 class="deal">
+                        Hot Deal ! Sale Up To 25% <span class="primary">off</span>
+                    </h1>
+                    <p class="third-description">
+                        It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.
+
+                    </p>
+                   <button class="sign-up-btn">
+                    Sign Up
+                   </button>
+                </div>
+                   <img src="./Asset/pngwing 8.png" alt="">
+                </div>
+                </section>
+                <section>
+                    <h2 class="section-title">
+                        Instagram
+                    </h2>
+                    <p class="second-description">
+                        It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+                     </p>
+                </section>
     </main>
     <footer>
 
