added ig section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
                     <p class="second-description">
                         It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
                      </p>
+                     <div class="ig-part">
+                        <div class="ig-flower">
+                            <img class="flower-1" src="./Asset/Flower 01.png" alt="">
+                        </div>
+                        <div class="ig-flower-2">
+                            <img class="flower-2" src="./Asset/Rectangle 4.png" alt="">
+                        </div>
+                        <div class="ig-flower-3">
+                            <img class="flower-3" src="./Asset/Rectangle 5.png" alt="">
+                        </div>
+                        <div class="ig-flower-4">
+                            <img class="flower-4" src="./Asset/Rectangle 6.png" alt="">
+                        </div>
+                     </div>
                 </section>
     </main>
     <footer>
