added email section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 </div>
                 </section>
                 <section>
+                   <div class="ig-section"> 
                     <h2 class="section-title">
                         Instagram
                     </h2>
@@ -103,6 +104,19 @@
                             <img class="flower-4" src="./Asset/Rectangle 6.png" alt="">
                         </div>
                      </div>
+                    </div>
+                </section>
+                <!-- email section -->
+                <section>
+                    <div class="email-section">
+                        <h3 class="section-title">Get The Latest Deals</h3>
+                        <p class="second-description">$30 coupon for first shopping</p>
+                        <div class="enter-email">
+                        <input class="email-com" type="email" name="" placeholder="Enter Your Email" id="">
+                    <button class="banner-btn">Subscribe</button>
+                    </div>
+                    </div>
+                    
                 </section>
     </main>
     <footer>
