added review section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                      </div>
                     </div>
                 </section>
+                
                 <!-- email section -->
                 <section>
                     <div class="email-section">
@@ -116,7 +117,35 @@
                     <button class="banner-btn">Subscribe</button>
                     </div>
                     </div>
-                    
+                </section>
+                <!-- review section -->
+                <section>
+                    <div class="review-container">
+                       <div class="review-title">
+                        <h2>Reviews</h2>
+                       </div>
+                        <div class="review-1">
+                                <img class="logo" src="./bald-empty-face-icon-avatar-illustration-vector.jpg" alt="">
+                            <h2>
+                                Marry Hardy
+                            </h2>
+                            <p>
+                                <p class="comments">Flowers were beautiful, she loved them and they were delivered on time</p>
+                            </p>
+                        </div>
+                        <div class="review-2">
+                            <img class="logo" src="./women logo.png" alt="">
+                            <h2>alexandra</h2>
+                            <p class="comments">Beautiful flowerer bouquet delivered & effortlessly delivered at the same day I ordered the birthday bouquet</p>
+                        </div>
+                        <div class="review-3">
+                            <img class="logo" src="./man logo.png" alt="">
+                            <h2>
+                                Devid smith
+                            </h2>
+                            <p class="comments">So reliable flower shop will definitely come back thank you for your excellent service</p>
+                        </div>
+                    </div>
                 </section>
     </main>
     <footer>
