--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <section>
                     <div class="review-container">
                        <div class="review-title">
-                        <h2>Reviews</h2>
+                        <h2> Client Reviews</h2>
                        </div>
                         <div class="review-1">
                                 <img class="logo" src="./bald-empty-face-icon-avatar-illustration-vector.jpg" alt="">
@@ -149,7 +149,18 @@
                 </section>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <h1 class="title">
+                <span class="primary">Flower</span>Shop
+            </h1>
+            <div class="footer-p">
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+                </p>
+                <p class="shop">@2020-2023, FlowerShop.com. All rights reserved.</p>
+            </div>
+            
+        </div>
     </footer>
 </body>
 </html>
